Feat: Implementando as exccepitons nos services